feat: add gulp-sass in gulpfile.js

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/SuchkovaTanya/repair-design#readme",
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.0.2",
+    "gulp-scss": "^1.4.0",
+    "sass": "^1.26.2"
   },
   "dependencies": {
     "browser-sync": "^2.26.7"
